--- a/mediaTUM/.gitignore
+++ b/mediaTUM/.gitignore
@@ -119,3 +119,9 @@ $RECYCLE.BIN/
 hs_err_pid*
 
 # End of https://www.gitignore.io/api/intellij,java,macos,windows
+
+
+
+# Exclude lib folder
+
+lib/
